Issue 32458: Right align numbers.
SVN r55640 |2017-12-28 01:43:46 +0000

--- a/webapp/TargetedMS/css/FiguresOfMerit.css
+++ b/webapp/TargetedMS/css/FiguresOfMerit.css
@@ -29,3 +29,12 @@
     opacity: 1;
     cursor: pointer;
 }
+
+.fom-table td.fom-number{
+    text-align: right;
+    white-space:nowrap;
+}
+
+.fom-table td.fom-label{
+    white-space:nowrap;
+}
